--- a/app/views/components/market-depth.html
+++ b/app/views/components/market-depth.html
@@ -1,24 +1,40 @@
-<div class="small-12 columns">
-  <div class="row collapse">
-    <div class="small-6 columns">
-      <div class="bid header">Bid</div>
+<div>
+  <div class="small-12 columns">
+    <form class="row collapse" ng-submit="search()">
+      <label>Instrument</label>
+      <div class="small-9 columns">
+        <select name="instrument" ng-model="instrument" ui-select2  ng-disabled="loading">
+          <option ng-repeat="inst in instruments" value="{{inst}}">{{inst}}</option>
+        </select>
+      </div>
+      <div class="small-3 columns">
+        <button type="submit" class="inline button postfix" ng-disabled="loading"><i class="fa fa-search"></i>
+        </button>
+      </div>
+    </form>
+  </div>
+  <div class="small-12 columns">
+    <div class="row collapse">
+      <div class="small-6 columns">
+        <div class="bid header">Bid</div>
+      </div>
+      <div class="small-6 columns">
+        <div class="offer header">Offer</div>
+      </div>
+      <ul class="small-6 columns no-bullet">
+        <li ng-repeat="bid in depth.bids | orderBy:'price'" class="bid" ng-class="{touch: $first}">
+          <div>
+            {{bid.price}}
+          </div>
+        </li>
+      </ul>
+      <ul class="small-6 columns no-bullet">
+        <li ng-repeat="offer in depth.offers | orderBy:'+price'" class="offer" ng-class="{touch: $first}">
+          <div>
+            {{offer.price}}
+          </div>
+        </li>
+      </ul>
     </div>
-    <div class="small-6 columns">
-      <div class="offer header">Offer</div>
-    </div>
-    <ul class="small-6 columns no-bullet">
-      <li ng-repeat="bid in depth.bids | orderBy:'price'" class="bid" ng-class="{touch: $first}">
-        <div>
-          {{bid.price}}
-        </div>
-      </li>
-    </ul>
-    <ul class="small-6 columns no-bullet">
-      <li ng-repeat="offer in depth.offers | orderBy:'+price'" class="offer" ng-class="{touch: $first}">
-        <div>
-          {{offer.price}}
-        </div>
-      </li>
-    </ul>
   </div>
 </div>
