ui router code has vanished so moved file to app, made container component, added market order

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -19,6 +19,16 @@ body {
   padding: 1em;
 }
 
+.right {
+  text-align: right;
+}
+
+.app {
+  float: left;
+  width: rem-calc(350);
+  margin: rem-calc(20);
+}
+
 .select2-container {
   width: 100%;
 }
