--- a/app/views/market-depth.html
+++ b/app/views/market-depth.html
@@ -1,4 +1,4 @@
-<div ng-hide="hide" class="container row" draggable>
+<div class="container">
   <header on-close="hide = true" title="'Market Depth'"></header>
   <div class="content">
     <div class="small-12 columns">
