--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,6 +1,6 @@
   <div class="toolbar row">im a toolbar</div>
   <div class="workspace row">
-    <market-depth class="app"></market-depth>
-    <market-order class="app"></market-order>
+    <market-depth class="app medium-6 columns" draggable ng-hide="hide"></market-depth>
+    <market-order class="app medium-6 columns" draggable ng-hide="hide"></market-order>
   </div>
 </div>
