--- a/partial/collection/collection.html
+++ b/partial/collection/collection.html
@@ -20,7 +20,7 @@ Foil: <input type="checkbox"
        ng-model="newCard_foil">
 Number Privately owned: <input type="text"
        ng-model="newCard_private">
-Number Privately owned: <input type="text"
+Number owned on Tinstreet: <input type="text"
        ng-model="newCard_public">
        <input type="submit">
 </form>
