--- a/partial/collection/collection.html
+++ b/partial/collection/collection.html
@@ -16,8 +16,7 @@
 <select ng-model="condition" ng-options="instrument.condition as instrument.condition for instrument in searchInstrument.originalObject.instruments | unique:'condition'"></select>
 
 
-Foil: <input type="checkbox"
-       ng-model="newCard_foil">
+Foil: <select ng-model="newCard_foil" ng-options="instrument.foil as instrument.foil | int_to_yn for instrument in searchInstrument.originalObject.instruments | unique:'foil'"></select>
 Number Privately owned: <input type="text"
        ng-model="newCard_private">
 Number owned on Tinstreet: <input type="text"
